# plants

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
examples/: leaf.rs
src/: lib.rs
src/systems/: leaf.rs  mod.rs
src/turtle/: polygon.rs
src/utils/: mod.rs
src/utils/app/: artwork.rs  mod.rs  static_artwork.rs
src/utils/draw/: mod.rs
src/utils/geometry/: mod.rs
