[package]
name = "plants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.9"
itertools = "0.11.0"
nannou = "0.18.1"
rand = "0.8.5"

[[example]]
name = "leafs"
path = "examples/leaf.rs"
